<resources>
    <string name="app_name">SmarthHome</string>
    <!-- Home Screen Camera -->
    <string name="username">Username</string>
    <string name="homepage_string">"Choose..."</string>
    <!--    LOGIN SCREEN-->

    <!-- Security Camera -->
    <string name="security_camera_string">Choose camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="baby_camera">Baby Camera</string>
    <string name="add_camera">Add Camera</string>
    <string name="view_saved_recordings">View Saved Recordings</string>
    <string name="save_recording">Save Recording</string>
    <string name="security_camera_warning">Recordings will show footage for the last 24 hours, all footage older than that will be deleted.If you want to save recordings for longer, tab the Save Recording button and choose the time interval</string>

    <string name="welcome">WELCOME</string>
    <string name="username_string">Username:</string>
    <string name="pass_string">Password:</string>
    <string name="login_string">Login</string>
    <string name="username_input">Username</string>
    <string name="signup">Don\'t you have an account? Sign up</string>

<!--    Wheelchair -->
    <string name="front_ramp">Front ramp</string>
    <string name="back_ramp">Back ramp</string>
    <string name="add_ramp">Add ramp</string>
    <string name="choose_ramp">Choose ramp</string>

<!--    Kitchen   -->
    <string name="oven">Oven</string>
    <string name="microwave">Microwave</string>
    <string name="add_appliance">Add appliance</string>
    <string name="choose_appliance">Choose appliance</string>
    <string name="set_program">Set program</string>

<!--    REGISTER SCREEN-->
    <string name="register_title">Please create an account</string>
<!--    PLACEHOLDERS-->
    <string name="username_placeholder">Username</string>
    <string name="fullname_placeholder">Full Name</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="signup_placeholder">Create account</string>
    <string name="cancel_placeholder">Cancel</string>
    <!--    PLACEHOLDERS-->
    <string name="choose_room_placeholder">Choose room</string>

    <!--    DOOR SCREEN-->
    <string name="door_title_string">Choose a door:</string>
    <string name="front_door_string">Front door</string>
    <string name="back_door_string">Back door</string>
    <string name="bedroom_door_string">Bedroom door</string>
    <string name="balcony_door_string">Balcony door</string>

    <!--    DOOR/WINDOW DETAILS SCREEN-->
    <string name="notifications_string">Notifications</string>

    <!--    TV REMOTE SCREEN-->
    <string name="tv_string">TV REMOTE</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>
    <string name="ventilation">Ventilation</string>
    <string name="preheat">Preheat</string>
    <string name="temperature">Temperature</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="save">SAVE</string>
    <string name="choose_vacuum">Choose Vacuum</string>
    <string name="vacuum">Vacuum</string>
    <string name="add_vacuum">Add vacuum</string>
    <string name="mop_after">Mop after</string>
    <string name="empty_dust_after">Empty dust after</string>

    <!--    WINDOW SCREEN-->
    <string name="window_title_string">Choose a window:</string>
    <string name="front_window_string">Front window</string>
    <string name="back_window_string">Back window</string>
    <string name="bedroom_window_string">Bedroom window</string>
    <string name="balcony_window_string">Balcony window</string>

    <!--    ENERGY CONSUMPTION SCREEN-->
    <string name="choose_month_string">Select a month for energy consumption visualization:</string>

    <!--    WINDOW SCREEN-->
    <string name="smart_curtains_morning_string">Set a morning hour for smart curtains</string>
    <string name="smart_curtains_evening_string">Set an evening hour for smart curtains</string>



    <string-array name="irrigation_string_array">
        <item>PowerSpray</item>
        <item>Full Body</item>
        <item>Mist</item>
    </string-array>




</resources>