<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/purple_500"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12"
    tools:context=".SecurityCamera">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/set_program"
            android:textSize="30sp"
            android:textColor="@color/black">
        </TextView>
    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="15sp"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:text="@string/start_time" />

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:timePickerMode="spinner"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="15sp"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:text="@string/end_time" />

        <TimePicker
            android:id="@+id/timePicker2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:timePickerMode="spinner"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/mop_after"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:text="@string/empty_dust_after"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:textColor="@color/purple_500"
            android:background="@color/purple_700"
            android:text="@string/save" />

    </GridLayout>

</LinearLayout>