<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_yellow"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/register_title"
        android:textColor="@color/custom_black"
        android:textSize="20sp"
         />

    <ImageView
        android:id="@+id/registerImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitleView"
        android:src="@drawable/profile_card"
        android:foregroundGravity="center_horizontal"
        />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/registerImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="10dp"
        android:hint="@string/fullname_placeholder"
        android:textColorHint="@color/custom_yellow"
        android:textColor="@color/custom_white"
        android:background="@color/custom_green"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fullNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="10dp"
        android:hint="@string/username_placeholder"
        android:textColorHint="@color/custom_yellow"
        android:textColor="@color/custom_white"
        android:background="@color/custom_green"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="10dp"
        android:hint="@string/email_placeholder"
        android:textColorHint="@color/custom_yellow"
        android:textColor="@color/custom_white"
        android:background="@color/custom_green"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="10dp"
        android:hint="@string/password_placeholder"
        android:textColorHint="@color/custom_yellow"
        android:textColor="@color/custom_white"
        android:background="@color/custom_green"
        android:maxLines="1"
        android:password="true"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:hint="@string/signup_placeholder"
        android:textColorHint="@color/custom_white"
        android:textColor="@color/custom_white"
        android:backgroundTint="@color/custom_green" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/cancel_placeholder"
        android:textColorHint="@color/custom_white"
        android:textColor="@color/custom_white"
        android:backgroundTint="@color/custom_green" />

</androidx.constraintlayout.widget.ConstraintLayout>