<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8CF9F"

    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="77dp"
        android:layout_height="79dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/login_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="172dp"
        android:text="@string/welcome"
        android:textSize="@dimen/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:text="@string/username_string"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="250dp"
        android:layout_height="39dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="304dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="428dp"
        android:text="@string/pass_string"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="244dp"
        android:layout_height="37dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="428dp"
        android:backgroundTint="@color/black"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="81dp"
        android:layout_height="38dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="636dp"
        android:backgroundTint="#000000"
        android:onClick="loginClick"
        android:text="@string/login_string"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWrongCredidentials"
        android:layout_width="253dp"
        android:layout_height="27dp"
        android:layout_marginTop="544dp"
        android:text=""
        android:textColor="@color/design_default_color_error"
        android:textSize="@dimen/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWrongUsername"
        android:layout_width="269dp"
        android:layout_height="20dp"
        android:layout_marginTop="364dp"
        android:text=""


        android:textColor="@color/design_default_color_error"
        android:textSize="@dimen/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWrongPass"
        android:layout_width="284dp"
        android:layout_height="20dp"
        android:layout_marginTop="488dp"
        android:text=""
        android:textColor="@color/design_default_color_error"
        android:textSize="@dimen/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSuccessfulLogin"
        android:layout_width="136dp"
        android:layout_height="26dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="688dp"
        android:text=""
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="@dimen/messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="600dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>