<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/purple_500"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12"
    tools:context=".SecurityCamera">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/security_camera_string"
            android:textSize="30sp"
            android:textColor="@color/black">
        </TextView>
    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:columnCount="3"
        android:rowCount= "2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cameraCard1"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/front_camera"
                    android:textSize="11sp"
                    android:textColor="@color/black"></TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cameraCard2"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_camera"
                    android:textSize="11sp"
                    android:textColor="@color/black"></TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cameraCard3"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_camera"
                    android:textSize="11sp"
                    android:textColor="@color/black"></TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addCamera"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_camera"
                    android:textSize="11sp"
                    android:textColor="@color/black"></TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>